project1/css/mystyles.css
/* general page formatting */
body {
    margin: 0 5%;
    background-color: #F8EDEB;
    color: #333;
}

* {
    font-family: "Sono", sans-serif;
}

#wrapper {
    display: grid;
    grid-template-columns: 20px 90% 20px;
    grid-template-rows: 14% 30px 40px 30px 13% 30px fit-content(10%) 30px 17% 30px fit-content(15%) 30px fit-content(11%) 30px fit-content(11%) 30px 60px;
    margin: 2vh auto;
}

#banner-section {
    grid-area: 1 / 2 / 2 / 3;
}

nav {
    grid-area: 3 / 2 / 4 / 3;
    background-image: url("../media/my_media/nav_image.png");
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 25px;
}

#welcome-header-image {
    grid-area: 5 / 2 / 6 / 3;
}

#welcome-text {
    grid-area: 7 / 2 / 8 / 3;
}

#project-header-image {
    grid-area: 9 / 2 / 10 / 3;
}

#project-text {
    grid-area: 11 / 2 / 12 / 3;
}

#contact-section {
    grid-area: 13/ 2 / 14 / 3;
}

#goals-section {
    grid-area: 15 / 2 / 16 / 3;
}

footer {
    grid-area: 17 / 2 / 18 / 3;
}

img {
    border-radius: 25px;
}

#banner-image {
    width: 100%;
    height: auto;
    border-radius: 25px;

}

#welcome-header-image {
    width: fit-content;
}

#project-header-image {
    width: fit-content;
}

#project-image {
    width: 100%;
    border-radius: 25px;
}

#project-text {
    margin: 10px;
    padding: 20px 80px 20px 60px;
    background-color: #fff;
    font-size: 15px;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 3px;
    word-spacing: 5px;
    color: #A3325C;
    list-style-position: outside;
    text-align: justify;
    border-radius: 25px;
}

#contact-section p,
#goals-section p {
    background-image: url("../media/my_media/border_image_top.png");
    background-repeat: no-repeat;
}

#welcome-text,
#contact-section p,
#goals-section p {
    margin: 10px;
    padding: 40px;
    background-color: #fff;
    font-size: 15px;
    font-weight: 500;
    line-height: 1.25;
    letter-spacing: 3px;
    word-spacing: 5px;
    color: #A3325C;
    border-radius: 25px;
}

#welcome-text {
    padding-left: 80px;
}

#contact-section p,
#goals-section p {
    padding-top: 60px;
}

/* navigation formatting */
#navigation {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: space-around;
}

#navigation li {
    margin: 0 20px;
    font-size: 25px;
    font-weight: 800;
    letter-spacing: 10px;
    cursor: pointer;
    text-transform: uppercase;
    line-height: 47px;
}

a:link {
    color: #FF8167;
    text-decoration-line: none;
}

a:visited {
    color: #559793;
}

a:focus {
    color: #92ae40;
}

a:hover {
    color: #F8A55B;
}

a:active {
    color: #FF9255;
}

footer p {
    background-color: transparent;
    color: #F8A55B;
    text-align: center;
    text-transform: uppercase;
    font-size: 25px;
    font-weight: 500;
    word-spacing: 30px;
    letter-spacing: 15px;
}

/* general header formatting */
h2 {
    font-size: 30px;
    color: #FF8167;
    margin-bottom: 20px;
    text-align: center;
    line-height: 1rem;
    letter-spacing: 2rem;
    text-transform: uppercase;
}

@media screen and (max-width: 960) {

    #welcome-text,
    #project-text {
        background-image: url("../media/my_media/border_image_top.png");
        background-repeat: no-repeat;
    }
}

@media screen and (min-width: 960px) {
    #wrapper {
        display: grid;
        grid-template-columns: 40px 3fr 20px repeat(3, 1fr) 20px 3fr 40px;
        grid-template-rows: fit-content(24%) 40px 60px 40px fit-content(18%) 40px fit-content(23%) 40px fit-content(19%) 40px 1fr;
        grid-column-gap: 0px;
        grid-row-gap: 0px;
        max-width: 1200px;
        max-height: 2100px;
    }

    #banner {
        grid-row: 1 / 2;
    }

    #banner-section {
        grid-area: 1 / 2 / 2 / 9;
    }

    #banner-image {
        width: 100%;
        border-radius: 25px;
    }

    nav {
        grid-area: 3 / 2 / 4 / 9;
        margin: 5px 0px;


    }

    #navigation li {
        margin: 0 20px;
        font-size: 25px;
        font-weight: 800;
        letter-spacing: 20px;
        cursor: pointer;
        text-transform: uppercase;
        line-height: 47px;
    }

    #welcome-header-image {
        grid-area: 5 / 2 / 6 / 3;
        width: 100%;
    }

    #welcome-text {
        grid-area: 5 / 4 / 6 / 9;
        background-image: url("../media/my_media/border_image_side.png");
        background-repeat: no-repeat;
    }

    #project-text {
        grid-area: 7 / 2 / 8 / 7;
        background-image: url("../media/my_media/border_image_side.png");
        background-repeat: no-repeat;
        background-position: right;
    }

    #project-header-image {
        grid-area: 7 / 8 / 8 / 9;
    }

    #contact-section {
        grid-area: 9 / 2 / 10 / 5;
    }

    #goals-section {
        grid-area: 9 / 6 / 10 / 9;
    }

    footer {
        grid-area: 11 / 2 / 12 / 9;
    }
}

@media screen and (min-width: 1000px) {
    #wrapper {
        margin: 2vh auto;
    }
}

